--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#5898CC"
+    android:id="@+id/splashContainer"
     android:orientation="vertical">
 
     <ImageView
