--- a/app/src/main/res/layout/adapter_main.xml
+++ b/app/src/main/res/layout/adapter_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/adapter_main"
+    android:id="@+id/adapter_main_container"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="160dp"
     android:layout_margin="20dp"
     android:elevation="3dp"
     card_view:cardCornerRadius="5dp">
@@ -14,8 +14,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <!--<ImageView
@@ -25,38 +24,66 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp" />-->
 
-            <TextView
-                android:id="@+id/adapter_iconTextView"
-                fontPath="fonts/weather.ttf"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:id="@+id/adapter_main_imageView"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:gravity="center_horizontal"
-                android:text=""
-                android:textSize="80dp" />
+                android:layout_marginTop="5dp" />
 
 
             <TextView
-                android:id="@+id/adapter_date"
+                android:id="@+id/adapter_main_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="Date"
-                android:textSize="10dp"
+                android:textColor="#545454"
+                android:textSize="15sp" />
 
-                />
-
-            <TextView
-                android:id="@+id/adapter_time"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text=""
-                android:textSize="10dp"
+                android:orientation="horizontal"
+                android:padding="2dp">
 
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/ic_wind" />
 
-                />
+                <TextView
+                    android:id="@+id/adapter_main_wind_speed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#545454"
+                    android:textSize="10sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:padding="2dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/ic_humid" />
+
+                <TextView
+                    android:id="@+id/adapter_main_humid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#545454"
+                    android:textSize="10sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -67,28 +94,80 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/adapter_placeName"
+                android:id="@+id/adapter_main_placeName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text=""
+                android:textColor="#545454"
                 android:textSize="20dp" />
 
-            <TextView
-                android:id="@+id/adapter_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text=""
-                android:textSize="15dp" />
 
             <TextView
-                android:id="@+id/adapter_currentTime"
-                android:layout_width="wrap_content"
+                android:id="@+id/adapter_main_date"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text=""
+                android:textColor="#545454"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/adapter_main_currentTemp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#545454"
                 android:textSize="50dp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <ImageView
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_arrow_upward_black_24dp" />
+
+                    <TextView
+                        android:id="@+id/adapter_main_highest_temp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#545454"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <ImageView
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:layout_gravity="center"
+                        android:rotation="180"
+                        android:src="@drawable/ic_arrow_upward_black_24dp" />
+
+                    <TextView
+                        android:id="@+id/adapter_main_lowest_temp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#545454"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
