--- a/app/src/main/res/layout/layout_current_climent.xml
+++ b/app/src/main/res/layout/layout_current_climent.xml
@@ -188,8 +188,8 @@
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
             android:gravity="center"
-            android:visibility="gone"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="visible">
 
             <ImageView
                 android:layout_width="200dp"
